# numchuck

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  install-test.yml  pip-test.yml  render-test.yml  wheels.yml
docs/: architecture.md  chuck_lexer.md  critical_fixes.md  error_handling.md  numchuck_home.md  pychuck_home.md  segfault_fix.md  static_chugins.md  windows_fix.md
docs/api/: conf.py  error_handling.rst  examples.rst  index.rst  quickstart.rst  requirements.txt
docs/api/api/: audio.rst  chuck.rst  constants.rst  events.rst
examples/python/: 01_basic_sine.py  02_offline_render.py  03_load_chuck_file.py  04_multiple_shreds.py  05_bitcrusher_chugin.py  06_reverb_chugin.py  07_parameter_control.py  08_advanced_synthesis.py  09_sequenced_shreds.py  README.md
scripts/: fix_bare_excepts.py  update.sh
scripts/benchmarks/: README.md  benchmark_simple.py
scripts/cmake/: fn_add_chugin.cmake
scripts/completions/: README.md  numchuck-completion.bash  numchuck-completion.zsh  pychuck-completion.bash  pychuck-completion.zsh
src/: CMakeLists.txt  _numchuck.cpp  _pychuck.cpp
src/numchuck/: __init__.py  __main__.py  _numchuck.pyi  _version.py  api.py  chuck_lang.py
src/numchuck/cli/: __init__.py  executor.py  main.py
src/numchuck/tui/: __init__.py  commands.py  common.py  editor.py  parser.py  paths.py  repl.py  session.py
src/pychuck/: __init__.py  __init__.pyi  _pychuck.pyi  _version.py  api.py
src/pychuck/cli/: executor.py  main.py
src/pychuck/tui/: chuck_lexer.py  commands.py  common.py  editor.py  parser.py  paths.py  project.py  repl.py  session.py  tui.py
tests/: test_api.py  test_basic.py  test_chuck_lexer.py  test_cli.py  test_command_parser.py  test_error_handling.py  test_examples.py  test_global_events.py  test_global_variables.py  test_integration.py  test_project_versioning.py  test_realtime_audio.py  test_shred_management.py  test_tui_common.py  test_wavfile.py
