[project]
name = "pychuck"
version = "0.1.0"
description = "Python bindings for ChucK audio programming language"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "shakfu", email = "shakfu@example.org" },
]
keywords = ["chuck", "audio", "music", "synthesis", "live-coding"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.20",
    "prompt-toolkit>=3.0.52",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.14.10",
    "types-Pygments>=2.18.0",
]

[project.urls]
Homepage = "https://github.com/shakfu/pychuck"

[project.scripts]
pychuck = "pychuck.cli.main:main"

[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1

# Build for Python 3.9-3.13
build = "cp39-* cp310-* cp311-* cp312-* cp313-*"

# Skip 32-bit, musllinux, and PyPy builds
skip = "*-win32 *-manylinux_i686 *-musllinux_* pp*"

# Run pytest to ensure that the package was correctly built
test-command = "pytest {project}/tests -v --tb=short -k 'not realtime'"
test-requires = ["pytest", "numpy"]

# Skip testing on emulated architectures (slow)
test-skip = "*-macosx_arm64 *-manylinux_aarch64"

# Needed for full C++17 support
[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"

# Linux: Install build dependencies
[tool.cibuildwheel.linux]
before-build = "yum install -y alsa-lib-devel libsndfile-devel bison flex || apt-get update && apt-get install -y libasound2-dev libsndfile1-dev bison flex"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["thirdparty", "build", "dist", ".git", ".venv", "venv", "__pycache__"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

